version 0.9.0-beta - XX-MMM-2009
 . ActionManager: fixed leak (issue #635)
 . Box2d: updated to r27 (pre 2.1.0) (issue #494)
 . Node: vertexZ is translated just once (issue #641)
 . Particles: code easier to mantain, same performance
 . SpriteSheet: supports any level of sub-children (issue #346)
 . Sprite: supports "honor parent transform" (issue #643)
 . Templates: using SDK 3.0 as base SDK
 . Textures: supports mipmap generation (issue #632)

version 0.9.0-alpha - 18-Nov-2009
 . All: using CC namespace (issue #520)
 . All: prevents warnings with Static Analizer (issue #613)
 . All: cocos protocols renamed to avoid confusion (part of issue #520)
 . All: Added compatibility with v0.8 (part of issue #520)
 . Animation: supports duration and reverse (issue #627)
 . Tests: Performance Tests re-integrated to main XCode project (issue #XXX)
 . BitmapFontAtlas: works with subdirectories (issue #612)
 . Box2d: updated to r26 (pre 2.1.0) (issue #494)
 . CocosLive: Uses CL namespace (part of issue #520)
 . CocosLive: Uses ASCII encoder (issue #617)
 . Sprite: Sprite and AtlasSprite merged in just one class (issue #620)
 . Sprite: AtlasSpriteManager renamed to SpriteSheet (issue #620)
 . Sprite: Sprite Frames and animations supports flipx / flipy (issue #620)
 . SpriteFrameCache: added an easier way to create animations and sprites (issue #620)
 . Templates: updated (part of issue #520 and issue #620)
 . Templates: includes cocos2d and CocosDenshion licences files
 . TextureMgr: renamed to TextureCache (part of issue #620)
 . XCode: textures files in 1 xcode group (Texture2d, PVRTexture, TextureAltas, TextureCache)

version 0.8.2 - 19-Oct-2009
 . Actions: Animate copy restoreOriginalFrame parameter (issue #602)
 . ChipmunkTest: uses new API to set director type (issue #XXX)
 . CocosLive: doesn't use deprecated methods (issue #604)
 . MenuItem: added isSelected property (issue #601)
 . Tests: removed copyrighted fonts (part of issue #596)
 
version 0.8.2-rc1 - 14-Oct-2009