@@ -210,16 +210,13 @@ static CCDirector *_sharedDirector = nil;
 //
 - (void) mainLoop
 {    
-	/* clear window */
     glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);
-	
+		
 	/* calculate "global" dt */
 	[self calculateDeltaTime];
-	if( ! isPaused_ )
-		[[CCScheduler sharedScheduler] tick: dt];
-	
-	
-	/* to avoid flickr, nextScene MUST be here: after tick and before draw */
+
+	/* to avoid flickr, nextScene MUST be here: after tick and before draw.
+	 XXX ? Which bug is this one. It seems that it can't be reproduced with v0.9 */
 	if( nextScene )
 		[self setNextScene];
 	
@@ -233,6 +230,10 @@ static CCDirector *_sharedDirector = nil;
 		[self showFPS];
 	
 	glPopMatrix();
+	
+	/* tick after glClear: issue #533 */
+	if( ! isPaused_ )
+		[[CCScheduler sharedScheduler] tick: dt];
 	
 	/* swap buffers */
 	[openGLView_ swapBuffers];	
